[package]
name = "egress-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ffmpeg-rs-raw = { git = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git", rev = "bde945fe887dfdb38fff096bbf1928b9e8e8469f" }
livekit = { version = "0.7.0", features = ["rustls-tls-native-roots"] }
bytes = "1.6.0"
libc = "0.2.153"
serde = { version = "1.0.197", features = ["derive"] }
log = "^0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
futures-util = "0.3.31"
